working in some corrections

--- a/MAIN.tex
+++ b/MAIN.tex
@@ -196,8 +196,6 @@
 
 \begin{singlespace}
 \tableofcontents
-\listoffigures 
-\listoftables
 \end{singlespace}
 	
 
@@ -208,6 +206,12 @@
 
 
 %%%%%%%%%%%
+\begin{singlespace}
+	\listoffigures 
+	\listoftables
+\end{singlespace}
+
+
 \backmatter
 
 \printbibliography
