--- a/config.tex
+++ b/config.tex
@@ -22,13 +22,10 @@
 	\def\elementBB{\textbf{Institute for System Software}}
 
 	\def\elementC{Supervisor}
-	\def\elementCC{\textbf{tbd}}
+	\def\elementCC{\textbf{DI Raphael Mosaner}}
 
 	\def\elementD{Co-Supervisor}
-	\def\elementDD{\textbf{Dr. Christian Wirth}}
-
-	\def\elementE{Co-Supervisor}
-	\def\elementEE{\textbf{Dr. Daniele Bonetta}}
+	\def\elementDD{\textbf{Dr. Christian Wirth\\Dr. Daniele Bonetta}}
 
 %% Hier Datum eingeben:
 %% Enter the date:  
@@ -40,7 +37,7 @@
 	
 %% Hier Titel eingeben; steht über dem K:
 %% Enter the title; it appears above the K:
-	\def\title{Contributing the ECMAScript proposal ``Module blocks'' into Graal.js}
+	\def\title{Contributing the ECMAScript proposal ``Module blocks'' to Graal.js}
 
 %% Hier ggf. Untertitel und LVA eingeben; stehen unter dem K. Falls sie nicht benötigt werden, bitte NICHT LÖSCHEN sondern frei lassen:
 %% If necessary, enter a subtitle and course here; below the K. If they are not needed, please DO NOT DELETE them. Simply leave them blank.
