--- a/contents/02_Background.tex
+++ b/contents/02_Background.tex
@@ -1,4 +1,4 @@
-\emph{This chapter lays out the theoretical background of this thesis by first introducing the general concepts of a high-level language virtual machine (HLL-VM) like the Java Virtual Machine (JVM) and then going on to more specific features of the GraalVM. In the following the next abstraction layer the Truffle API is explained before coming to the explicit project Graal.Js which uses Truffle. The last section evolves around the ECMAScript parts of the topic with a brief glance at the current state of modules and what the proposal tries to achieve.}
+\emph{This chapter lays out the theoretical background of this thesis by first introducing the general concepts of a high-level language virtual machine (HLL-VM) like the Java Virtual Machine (JVM) and then going on to more specific features of the GraalVM. In the following the next abstraction layer the Truffle API is explained before coming to the explicit project Graal.js which uses Truffle. The last section evolves around the ECMAScript parts of the topic with a brief glance at the current state of modules and what the proposal tries to achieve.}
 
 \section{HLL-VMs}
 \subsection{HLL-VM groundwork}
@@ -47,15 +47,15 @@ This section explained the JVM ecosystem. It is split up between an AOT-compiler
 	\caption{The Graal Virtual Machine simplified structure}
 	\label{fig:graalvm}
 \end{figure}
-As seen in the last two sections building a virtual machine for executing programming languages is a non-trivial task needing a lot of effort. A lot of this effort has to be redone for different programming languages. The core idea of Graal is to reduce this effort via a layered structure where each language implementation is in essence an abstract syntax tree (AST) interpreter via the Truffle API. All low level implementions like JIT compiling, data areas, memory management, optimizations and the like are reused by each language implementation connecting to the GraalVM or any JVM via Truffle. Considering performance these implementations are best run on top of GraalVM. Reasons for that are explained in the next section.\\
-The GraalVM complete ecosystem is comprised of multiple technologies. In the runtime environment the GraalVM reuses most components from the HotSpot VM like the class loader subsystem, the runtime data area and parts of the execution engine, in particular the interpreter and the garbage collector, but replaces the HotSpot JIT compiler with the Graal compiler. Since the Graal compiler functions differently it also implements an interface between the regular HotSpot components and the Graal compiler. Outside of the VM it also has the Truffle framework for different language implementations. Already implemented languages are JavaScript, Ruby, R, python and LLVM-based languages like C, C++ and Rust. Thus the feature is able to end the segregation of programming languages. Another feature is its ability to be embedded in combination with OpenJDK, node.js or inside Oracle Database, while also being able to be run standalone.
-\subsection{Graal Compiler}\label{sec:graalcomp}
-The Graal Compiler replaces the JIT compiler in a JRE. Other as the regular java JIT compiler it doesn't translate java bytecode directly to machine code but to the Graal IR. \cite{inproceedings} The Graal IR is a graph-based high-level intermediate representation. This intermediate representation is key to Graal's aggressive optimization techniques based on optimistic assumptions such as specific types and branch prediction. Aggressive optimization also means the compilation is prone to failures which are caught by so called guards. When a guard fails execution is transferred back to interpretation. This mechanism is called deoptimization. \cite{ChambDeopt} Compiled code gets saved as a VMs internal data structure and subsequent calls to the particular part of code get always directly executed in machine code omitting the unnecessary step of interpreting.\\
+As seen in the last two sections building a virtual machine for executing programming languages is a non-trivial task needing a lot of effort. A lot of this effort has to be redone for different programming languages. The core idea of GraalVM is to reduce this effort via a layered structure where each language implementation is in essence an abstract syntax tree (AST) interpreter via the Truffle API. All low level implementions like JIT compiling, data areas, memory management, optimizations and the like are reused by each language implementation connecting to the GraalVM or any JVM via Truffle. Considering performance these implementations are best run on top of GraalVM. Reasons for that are explained in the next section.\\
+The GraalVM complete ecosystem is comprised of multiple technologies. In the runtime environment the GraalVM reuses most components from the HotSpot VM like the class loader subsystem, the runtime data area and parts of the execution engine, in particular the interpreter and the garbage collector, but replaces the HotSpot JIT compiler with the GraalVM compiler. Since the GraalVM compiler functions differently it also implements an interface between the regular HotSpot components and the GraalVM compiler. Outside of the VM it also has the Truffle framework for different language implementations. Already implemented languages are JavaScript, Ruby, R, python and LLVM-based languages like C, C++ and Rust. Thus the feature is able to end the segregation of programming languages. Another feature is its ability to be embedded in combination with OpenJDK, node.js or inside Oracle Database, while also being able to be run standalone.
+\subsection{GraalVM Compiler}\label{sec:graalcomp}
+The GraalVM Compiler replaces the JIT compiler in a JRE. Other as the regular java JIT compiler it doesn't translate java bytecode directly to machine code but to the Graal IR. \cite{inproceedings} The Graal IR is a graph-based high-level intermediate representation. This intermediate representation is key to GraalVM's aggressive optimization techniques based on optimistic assumptions such as specific types and branch prediction. Aggressive optimization also means the compilation is prone to failures which are caught by so called guards. When a guard fails execution is transferred back to interpretation. This mechanism is called deoptimization. \cite{ChambDeopt} Compiled code gets saved as a VMs internal data structure and subsequent calls to the particular part of code get always directly executed in machine code omitting the unnecessary step of interpreting.\\
 Another component the GraalVM project substitutes is the Java Native Interface \cite{Lindholm}. It is exchanged with the Graal Native Function Interface (GNFI). \cite{grimmerNative} It allows for efficient native function calls within Java code.
 \subsection{Truffle API}
 The Truffle language implementation framework enables programmers to write an AST interpreter in Java for any programming language. The biggest advantage is the reuse of JVM runtime services such as automatic memory management with execution by a JVM. But how does the interpreter work?\\
 The interpreter works by modelling language structures as nodes building the abstract syntax tree. Evaluation of the tree works by invoking the execute method which is within every type of Node. These different Node types all extend the class Node forcing them to have an execute method implementing their respective semantics. The whole tree gets then recursively evaluated by the recursive execute method calls.\\
-Optimizations on AST level mostly work with a speculative specialization technique. The Nodes rewrite themselves into specialized variants at run time where profiling information is available. \cite{wuerthSelf} As we have discussed earlier in the Graal compiler speculative optimizations, like a specialization, are prone to failure. Instead of going just back to interpretation a failed specialized Node rewrites itself back into a more generic version. What kind of specializations are possible via this approach?\\
+Optimizations on AST level mostly work with a speculative specialization technique. The Nodes rewrite themselves into specialized variants at run time where profiling information is available. \cite{wuerthSelf} As we have discussed earlier in the GraalVM compiler speculative optimizations, like a specialization, are prone to failure. Instead of going just back to interpretation a failed specialized Node rewrites itself back into a more generic version. What kind of specializations are possible via this approach?\\
 Type specialization especially with dynamic languages is an operation reducing code on runtime and thus creating speed up. To discuss this optimization method further the add method with the + operator in the scripting language JavaScript is used. The add method in JavaScript is defined for various types including Strings and Numbers. We reduce the language's complexity to the forementioned two types in the example.\\
 \begin{lstlisting}[caption=JavaScript addition types minimal example]
 	var w = 1 + "Test" // results in "1Test"
@@ -77,9 +77,9 @@ The node rewriting process shown in figure \ref{fig:trufNR} happens at various s
 One note on the compilation process: The compiler uses as said aggressive optimization methods. This operation is successful for stable ASTs. Then compilation techniques like method inlining and eliminating interpreter dispatch code can be performed. This technique is called partial evaluation.\\
 In addition to type specialization truffle offers so called polymorphic inline caches. \cite{ChambOpti} An inline cache itself is simply caching a method from a former lookup at call site. In Truffle inline caches are built by chaining nodes which check for cached target matches which are then executed. At a predefined chain length the chain gets replaced by a polymorphic node handling all operations.\\
 As discussed in the JVM section program loading often requires resolution. An implemented truffle language can cache resolved targets at run time by replacing an unresolved node with its resolved version. Thus further resolutions of this node are prevented which leads to an optimized version of the AST.\\
-This section gave a small introduction into the Truffle API for implementing languages via an AST interpreter for running on top of a JVM and showed the optimizations that are conducted on AST level. After an AST at run time becomes stable with no more rewrites the AST is compiled dynamically to machine code. Truffle uses the JIT compiler of a JVM, in case of GraalVM the Graal compiler. If Graal is used the nodes' execute methods are inlined producing one compilation unit of the whole tree. In the next step the Graal compiler uses its aggressive optimization techniques for the whole inlined tree unit producing efficient machine code. These combined methods are based on the principle of the first Futamura Projection also called partial evaluation. \cite{FutaPart} As stated in section \ref{sec:graalcomp} guards or also optimization points need to be implemented to check all the assumptions made before compilation. As soon as it is necessary to rewrite a node during machine code execution the control flow gets transferred back to the interpreted AST to rewrite the node either on profiling information to another specialized version or a more generic version. \cite{ChambDeopt}
+This section gave a small introduction into the Truffle API for implementing languages via an AST interpreter for running on top of a JVM and showed the optimizations that are conducted on AST level. After an AST at run time becomes stable with no more rewrites the AST is compiled dynamically to machine code. Truffle uses the JIT compiler of a JVM, in case of GraalVM the GraalVM compiler. If GraalVM is used the nodes' execute methods are inlined producing one compilation unit of the whole tree. In the next step the GraalVM compiler uses its aggressive optimization techniques for the whole inlined tree unit producing efficient machine code. These combined methods are based on the principle of the first Futamura Projection also called partial evaluation. \cite{FutaPart} As stated in section \ref{sec:graalcomp} guards or also optimization points need to be implemented to check all the assumptions made before compilation. As soon as it is necessary to rewrite a node during machine code execution the control flow gets transferred back to the interpreted AST to rewrite the node either on profiling information to another specialized version or a more generic version. \cite{ChambDeopt}
 
-In conclusion the Graal project aims at simplifying language implementations and application programming while also trying to have a performant run time. The simplification comes from introducing a framework for implementing languages as AST interpreters which can run on top of any JVM. The performance comes especially from running the AST interpreter on top of the GraalVM which uses various techniques to bring run time performance to higher levels.
+In conclusion the GraalVM project aims at simplifying language implementations and application programming while also trying to have a performant run time. The simplification comes from introducing a framework for implementing languages as AST interpreters which can run on top of any JVM. The performance comes especially from running the AST interpreter on top of the GraalVM which uses various techniques to bring run time performance to higher levels.
 %\begin{tikzpicture}[nodes={draw, circle}, ->, minimum size=2cm, level distance = 2.5cm, sibling distance = 2.5cm]
 %	\node[fill=lightorange] (p) {U(+)}
 %		child { node[fill=lightorange] (n) {U(1)}}
@@ -94,20 +94,23 @@ In conclusion the Graal project aims at simplifying language implementations and
 %\node[fill=lightorange, label=right:{Uninitialized}] (u) {U};
 %\node[below=.3cm of u,fill=lightblue, label=right:{Number}] (n) {N};
 %\end{tikzpicture}
-\section{Graal.Js}
-The Graal.Js project is an AST interpreter on top of Truffle. It is in full compliance of the newest ECMAScript 2020 language specification \cite{kangax1, GraaljsComp} and growing support of the technical committee 39 (TC39) proposals for future ECMAScript language specifications. \cite{kangax2, gitTC}  The runtime can execute JavaScript and Node.js applications with the previous discussed benefits of the Graal technology stack. \cite{Graaljs} As a recap the most notable ones are performance and polyglot programming support with multithreading support.
+\section{Graal.js}
+The Graal.js project is an AST interpreter on top of Truffle. It is in full compliance of the newest ECMAScript 2020 language specification \cite{kangax1, GraaljsComp} and growing support of the technical committee 39 (TC39) proposals for future ECMAScript language specifications. \cite{kangax2, gitTC}  The runtime can execute JavaScript and Node.js applications with the previous discussed benefits of the GraalVM technology stack. \cite{Graaljs} As a recap the most notable ones are performance and polyglot programming support with multithreading support.
 
-\section{ECMAScript modules}
-With ECMAScript 6 the language got modules making it possible to divide code up into multiple files. Although this possibility has been around in JavaScript before, it was implemented by external libraries and not an inherent specified feature. The ability to import modules as needed came with a rise in source code size in regular JavaScript programs. When the language started out it was not unusual to have a one-line .js (JavaScript) file. As the code size rose the necessity of modules came with it which led to a multitude of concurring solutions. As script concatenation as the basic step meant manual building and testing the method could only be used in simple projects while more difficult ones started using module loaders. Those in turn could also become complicated for larger code bases. To overcome these problems so called module bundlers, like Babel, could be used to generate the needed JavaScript code at build time. Thus the code includes all dependencies in a single concatenated file. The specification of modules in ECMAScript bundled these efforts into one concept and gave implicit module support by the language. With this specification performance of module loading was pushed towards engine implementation.\\
-In a short note to avert term mixup. ECMAScript is a language specification for script languages. The actual code written is in JavaScript and this language is then run via engines in browsers on computers. So in hard terms an ECMAScript specification does not need to be fully supported by a particular browser and single features sometimes are left out but in general engine implementation follows the ECMAScript specification leading to the specification's features in JavaScript sourcecode.\\
+\section{ECMAScript modules - Current state}
+With ECMAScript 6 the language got modules making it possible to divide code up into multiple files. Although this possibility has been around in JavaScript before, it was implemented by external libraries and not an inherent specified feature. The ability to import modules as needed came with a rise in source code size in regular JavaScript programs. When the language started out it was not unusual to have a one-line .js (JavaScript) file. As the code size rose the necessity of modules came with it which led to a multitude of concurring solutions. As script concatenation as the basic step meant manual building and testing the method could only be used in simple projects while more difficult ones started using module loaders. Those in turn could also become complicated for larger code bases. To overcome these problems so called module bundlers, like Babel, could be used to generate the needed JavaScript code at build time. Thus the code includes all dependencies in a single concatenated file. The specification of modules in ECMAScript bundled these efforts into one concept and gave implicit module support by the language. With this specification performance of module loading was pushed towards engine implementation.
 
-\subsection{Current State}
-In a broad sense modules at current state read like regular scripts with the difference of them being in strict-mode only and possible usage of imports and exports. The benefits are separate files with self-contained functionality, sharing of those files between different projects, diminishing naming conflicts, obvious naming conflicts and the robustness that comes with shared open source. But what are modules in the context of JavaScript in detail?\\
-As a module is run in strict mode all declared variables, functions and classes are private and cannot be accessed from the outside. Only those top-level items that are explicitly exported by the keyword \emph{export} can be used from a script importing the module. This is then done by the keyword \emph{import} either the whole module or explicitly named items which can also be aliased.\\
-As modules have to be loaded and are sometimes scattered throughout the web, deferring module loading is a default setting. Another note is the caching of modules. A module is only executed the first time it gets imported. All other scripts importing the module are given the already evaluated exports. This also means that a change in one of the exports is visible to all importing scripts.\\
+In a short note to avert term mixup. ECMAScript is a language specification for script languages. The actual code written is in JavaScript and this language is then run via engines in browsers on computers. So in hard terms an ECMAScript specification does not need to be fully supported by a particular browser and single features sometimes are left out but in general engine implementation follows the ECMAScript specification leading to the specification's features in JavaScript sourcecode.
+
+In a broad sense modules at current state read like regular scripts with the difference of them being in strict-mode only and possible usage of imports and exports. The benefits are separate files with self-contained functionality, sharing of those files between different projects, diminishing naming conflicts, obvious naming conflicts and the robustness that comes with shared open source. But what are modules in the context of JavaScript in detail?
+
+As a module is run in strict mode all declared variables, functions and classes are private and cannot be accessed from the outside. Only those top-level items that are explicitly exported by the keyword \emph{export} can be used from a script importing the module. This is then done by the keyword \emph{import} either the whole module or explicitly named items which can also be aliased.
+
+As modules have to be loaded and are sometimes scattered throughout the web, deferring module loading is a default setting. Another note is the caching of modules. A module is only executed the first time it gets imported. All other scripts importing the module are given the already evaluated exports. This also means that a change in one of the exports is visible to all importing scripts.
+
 This standard unfortunately left out the possibility to add inline modules into a script which results in modules just containing one exported function. This results into unnecessary files which could be avoided by inlining the module into the original script. This exact feature is discussed in the next section.
 
-\subsection{Proposal: Module blocks}
+\section{Proposal: Module blocks}
 Module blocks are a TC39 stage 2 proposal from Daniel Ehrenberg and Surma. \cite{gitMB} As stated ECMAScript does not have the feature of inlining modules. This cause several issues in programming applications, most notably code composition and file count. In the current state if code should be run in parallel an additional file is needed resulting in every Worker needing a separate file. So module blocks work like a module but are inside the script where they are also imported. One important note to take is the non closure of module blocks following the principle of coding in one place, running it anywhere. It can thus also be imported from any Realm and is code independent of a particular context. So in a sense module blocks are mainly a syntactical addition to ECMAScript as the concept is to provide a syntax for inlined module contents. These can then afterwards be imported asynchronously. Reason being the ability of module blocks to import other modules as well. As regular modules since ES6 module blocks will be cached in the module map after the first import. One note to take is, that module blocks need to be imported via dynamic import() calls rather than import statements. This is due to them not being addressable as specifier strings.\\
 \begin{figure}
 	\includegraphics[scale=0.165]{../figures/ModuleSyntax.png}
