--- a/frontmatter.tex
+++ b/frontmatter.tex
@@ -1,7 +1,7 @@
 % !TeX encoding = UTF-8
 % !TeX root = MAIN.tex
 
-	\ifeng \chapter*{Sworn Declaration}
+	\ifeng \chapter*{Statutory Declaration}
 	I hereby declare under oath that the submitted thesis has been written solely by me without any third-party assistance, information other than provided sources or aids have not been used and those used have been fully documented. Sources for literal, paraphrased and cited quotes have been accurately credited.
 	
 	The submitted document here present is identical to the electronically submitted text document.
@@ -36,7 +36,7 @@ The thesis aims at implementing an ECMAScript proposal from the TC39 proposals, 
 %% Hier Abstact in der jeweils anderen Sprache eingeben.
 %% Enter here the abtract in the other language.
 
-Die vorliegende Arbeit verfolgt das Ziel einen ECMAScript-Antrag aus den TC39-Anträgen, die module blocks, im vorliegenden Graal.js-Interpreter zu implementieren. Nach der Implementierung im Parser und der Runtime und entsprechenden Tests wird weiters ein Framework zum Übertragen von Code zwischen Prozessen eingerichtet und dessen Performance mit ursprünglichen Implementierungen verglichen. Die finale Implementierung wird über die Plattform github.com der Open-Source-Version von Graal.js hinzugefügt.
+Die vorliegende Arbeit verfolgt das Ziel einen ECMAScript-Erweiterungsvorschlag aus den TC39-Erweiterungsvorschlägen, die module blocks, im bestehenden Graal.js-Interpreter zu implementieren. Nach der Implementierung im Parser und der Runtime und entsprechenden Tests wird weiters ein Framework zum Übertragen von Code zwischen Prozessen eingerichtet und dessen Performance mit ursprünglichen Implementierungen verglichen. Die finale Implementierung wird über die Plattform github.com der Open-Source-Version von Graal.js hinzugefügt.
 
 	\ifeng	\selectlanguage{english}
 	\else 	\selectlanguage{ngerman}
