--- a/literature.bib
+++ b/literature.bib
@@ -37,7 +37,7 @@ url = {https://docs.oracle.com/javase/specs/jls/se16/jls16.pdf}
 	url = {https://doi.org/10.1145/2509578.2509581},
 	doi = {10.1145/2509578.2509581},
 	abstract = {Building high-performance virtual machines is a complex and expensive undertaking; many popular languages still have low-performance implementations. We describe a new approach to virtual machine (VM) construction that amortizes much of the effort in initial construction by allowing new languages to be implemented with modest additional effort. The approach relies on abstract syntax tree (AST) interpretation where a node can rewrite itself to a more specialized or more general node, together with an optimizing compiler that exploits the structure of the interpreter. The compiler uses speculative assumptions and deoptimization in order to produce efficient machine code. Our initial experience suggests that high performance is attainable while preserving a modular and layered architecture, and that new high-performance language implementations can be obtained by writing little more than a stylized interpreter.},
-	booktitle = {Proceedings of the 2013 ACM International Symposium on New Ideas, New Paradigms, and Reflections on Programming & Software},
+	booktitle = {Proceedings of the 2013 ACM International Symposium on New Ideas, New Paradigms, and Reflections on Programming \& Software},
 	pages = {187–204},
 	numpages = {18},
 	keywords = {dynamic languages, java, optimization, virtual machine, javascript, language implementation},
@@ -151,4 +151,10 @@ url = {https://docs.oracle.com/javase/specs/jls/se16/jls16.pdf}
 	title = {ECMAScript 2022 Language Specification},
 	url = {https://tc39.es/ecma262/},
 	urldate = {2021-03-31}
+}
+
+@online{pypl,
+	author = {Carbonnelle, Pierre},
+	url = {https://pypl.github.io/PYPL.html},
+	urldate = {2021-04-03}
 }
