main update with all chapters first draft finished

--- a/literature.bib
+++ b/literature.bib
@@ -26,6 +26,25 @@ year		= {2021},
 publisher = {Oracle America},
 url = {https://docs.oracle.com/javase/specs/jls/se16/jls16.pdf}
 	}
+
+@article{10.1145/3386327,
+    author = {Wirfs-Brock, Allen and Eich, Brendan},
+    title = {JavaScript: The First 20 Years},
+    year = {2020},
+    issue_date = {June 2020},
+    publisher = {Association for Computing Machinery},
+    address = {New York, NY, USA},
+    volume = {4},
+    number = {HOPL},
+    url = {https://doi.org/10.1145/3386327},
+    doi = {10.1145/3386327},
+    abstract = {How a sidekick scripting language for Java, created at Netscape in a ten-day hack, ships first as a de facto Web standard and eventually becomes the world's most widely used programming language. This paper tells the story of the creation, design, evolution, and standardization of the JavaScript language over the period of 1995--2015. But the story is not only about the technical details of the language. It is also the story of how people and organizations competed and collaborated to shape the JavaScript language which dominates the Web of 2020.},
+    journal = {Proc. ACM Program. Lang.},
+    month = jun,
+    articleno = {77},
+    numpages = {189},
+    keywords = {JavaScript, Standards, Browser game theory, Web browsers, History of programming languages, ECMAScript}
+}
 	
 @inproceedings{VMRule,
 	author = {W\"{u}rthinger, Thomas and Wimmer, Christian and W\"{o}\ss{}, Andreas and Stadler, Lukas and Duboscq, Gilles and Humer, Christian and Richards, Gregor and Simon, Doug and Wolczko, Mario},
@@ -106,6 +125,24 @@ url = {https://docs.oracle.com/javase/specs/jls/se16/jls16.pdf}
 	doi = {10.1023/A:1010095604496}
 }
 
+@online{graalVMStart,
+    title = {Get started with GraalVM},
+    url = {https://www.graalvm.org/docs/getting-started/},
+    urldate = {2021-06-08}
+}
+
+@online{graalVMIntro,
+    title = {Introduction to GraalVM},
+    url = {https://www.graalvm.org/docs/introduction/},
+    urldate = {2021-06-08}
+}
+
+@online{graalVMNative,
+    title = {GraalVM Native Image},
+    url = {https://www.graalvm.org/reference-manual/native-image/},
+    urldate = {2021-06-08}
+}
+
 @online{Graaljs,
 	title = {GraalVM JavaScript Implementation},
 	url = {https://www.graalvm.org/reference-manual/js/},
@@ -151,6 +188,24 @@ url = {https://docs.oracle.com/javase/specs/jls/se16/jls16.pdf}
 	title = {ECMAScript 2022 Language Specification},
 	url = {https://tc39.es/ecma262/},
 	urldate = {2021-03-31}
+}
+
+@online{ecmaProp,
+     title = {The TC39 Process},
+     url = {https://tc39.es/process-document/},
+     urldate = {2021-06-08}
+}
+
+@online{ecmaTest262,
+    title = {Test262: ECMAScript Test Suite},
+    url = {https://github.com/tc39/test262},
+    urldate = {2021-06-10}
+}
+
+@online{ecmaTestSpec,
+   title = {ECMA-414},
+   url = {https://www.ecma-international.org/publications-and-standards/standards/ecma-414/},
+   urldate = {2021-06-10}
 }
 
 @online{pypl,
