--- a/contents/01_Introduction.tex
+++ b/contents/01_Introduction.tex
@@ -1,8 +1,15 @@
-The following paragraphs serve as an introduction to the thesis by explaining the relevance both for \emph{GraalVM} and \emph{Graal.js} in general and in the specific case of the ECMAScript proposal \emph{module blocks}. The last paragraph explains the outline of the thesis.\\
-In 2019 Oracle released the GraalVM with active development up to present days. GraalVM is a multilingual runtime with multiple core features such as certain compiler optimizations, ahead-of-time compilation, polyglot programming, LLVM runtime and the Truffle language implementation framework. With the amount of supported programming languages and the foregoing mentioned features the GraalVM can be implemented into a variety of production environments. One environment seems of particular interest: Microservices on server. The GraalVM native image was able to lower startup time and memory footprint by a significant amount as graph 1.1 shows. These savings won over the social media platform Twitter which Microservices run on GraalVM and GraalVM in return created savings for their CPU times which makes it have an environmental impact. The other core feature of GraalVM is the support of multiple languages via the Truffle framework. With this framework different languages can be implemented on top of GraalVM. The different language implementations are split up into single projects for each language. This setup leads to the project Graal.js.\\
-Graal.js is the Truffle implementation of ECMAScript on the GraalVM. ECMAScript, with unofficial name JavaScript, is on spot three on the PYPL \cite{pypl} popularity index behind Java and Python indicating the programming language's relevance. From this relevance need arises to address the project's relevance. Graal.js is the interface, on top of Truffle implemented on the GraalVM, between polyglot programs consisting of JavaScript, Java and other languages. This standalone feature lets the interpreter have a stand-out position on all the engines. Coming from other relevant engines like V8 or SpiderMonkey which cannot support polyglot programs GraalVM is on par with their feature support of ECMAScript 6 and newer standards. An important matter for relevancy of an engine is obviously the feature support. With new features being added to the standard these features have to be implemented into the engines which brings us to the new feature to be implemented module blocks.\\
-Module blocks is an ECMAScript proposal by Daniel Ehrenberg and Surma based on inline modules. Inlining modules is a feature which is missing from the current ECMAScript. The absence has resulted into workarounds with various issues. ECMAScript cannot share code between processes thus residing on a single thread. Every module, worker and worklet needs a separate file cluttering project folders. Tasks short of stringification cannot be shared across agents. The multitude of problems cited can be addressed by module blocks. Module blocks is a stage 2 proposal on ECMAScript 262 and is most likely to be implemented in the 2022 version of ECMAScript. Since it has a high relevance for polyglot programs its implementation is key to staying on top of the technology stack which brings us to the purpose of this thesis.\\
-The main objective of this thesis is to implement the new ECMAScript stage 2 proposal module blocks into the Graal.js engine which is implemented via the Truffle framework. Furthermore testing for this implementation will be conducted. When the general workings are set a code shipping framework and benchmarks will be included.\\
+The following paragraphs serve as an introduction to the thesis by explaining the relevance both for \emph{GraalVM} and \emph{Graal.js} in general and in the specific case of the ECMAScript proposal \emph{module blocks}. The last paragraph explains the outline of the thesis.
+
+ECMAScript is the standardized version of the famous internet front-end scripting language JavaScript.  The ECMAScript specification includes language features and their expected behavior each scripting language should have. The specification then in turn is implemented by so-called engines that run JavaScript code. JavaScript is on spot three on the PYPL popularity index for programming languages indicating its popularity by google search trends. \cite{pypl} As a core technology of the internet it helped shaping the web as we see it today. An important part in the language becoming a core technology was browser support which had been a problem in the past. An issue arose for websites called interoperability across web browsers where the pages had to be programmed differently for each browser otherwise they would look divergently or even wouldn't work at all. \cite{10.1145/3386327} This issue was fixed by ECMAScript. Meanwhile a browser's engine's support is determined by feature support of the ECMAScript specification. The language specification development doesn't stagnate but is standardized via a proposal process which is divided into five stages and is overlooked by an installed ECMA-committee. Thus new language features bundled into versions are developed in a standardized environment with the web community and vendors together as a team. \cite{ecma}
+
+In 2019 Oracle released the GraalVM with active development up to present days. GraalVM is a multilingual runtime with multiple core features such as certain compiler optimizations, ahead-of-time compilation, polyglot programming, LLVM runtime and the Truffle language implementation framework. With the amount of supported programming languages and the foregoing mentioned features the GraalVM can be implemented into a variety of production environments. One environment seems of particular interest: Microservices on server environments. The GraalVM native image was able to lower startup time and memory footprint by a significant amount. \cite{graalVMNative} These savings won over the social media platform Twitter which Microservices run on GraalVM and GraalVM in return created savings for their CPU times which makes it have an environmental impact. The other core feature of GraalVM is the support of multiple languages via the Truffle framework. With this framework different languages can be implemented on top of GraalVM. \cite{graalVMStart}\cite{graalVMIntro} The framework itself provide The different language implementations are split up into single projects for each language. This setup leads to the project Graal.js.
+
+Graal.js is the Truffle implementation of ECMAScript on the GraalVM. The project embeds the language specification into the Truffle framework. In general the project transforms JavaScript source code into an abstract syntax tree to be executed by any Java Virtual Machine (JVM). \cite{Graaljs} The main components to be introduced for the task include a parser, nodes for the resulting abstract syntax tree and a transformation logic for translating the parser produced intermediate representation to the aforementioned abstract syntax tree. The Graal.js interpreter together with any JVM, preferably the GraalVM, is an ECMAScript engine and thus has to compete with other ECMAScript engines. With the official release of GraalVM 21 it showed to be on par with V8, Google's engine, and Spidermonkey, Mozilla's engine, with all three supporting 99\% of the newest ECMAScript version. \cite{kangax1} The big advantage Graal.js has over the other two engines is being embedded in the GraalVM ecosystem allowing polyglot programs. To keep up with current development the Graal.js project aims to implement proposal that haven't gone the whole way of the aforementioned proposal process and are yet to be released as new features of ECMAScript to be ahead of time. One of these yet to pass the process proposals is the module block proposal.
+
+Module blocks are an effort by Daniel Ehrenberg and Surma based on inline modules. Inlining modules is a feature which is missing from the current ECMAScript. The absence has resulted into workarounds with various issues. ECMAScript cannot share code between processes thus residing on a single thread. Every module, worker and worklet needs a separate file cluttering project folders. Tasks short of stringification cannot be shared across agents. The multitude of problems cited can be addressed by module blocks. Module blocks are a stage 2 proposal on ECMAScript 262 and is most likely to be implemented in the 2022 version of ECMAScript. \cite{gitMB} Since it has a high relevance for polyglot programs its implementation is key to staying on top of the technology stack which brings us to the purpose of this thesis.
+
+The main objective of this thesis is to implement the new ECMAScript stage 2 proposal module blocks into the Graal.js engine which is implemented via the Truffle framework. Furthermore testing for this implementation will be conducted. When the general workings are set a code shipping framework and benchmarks will be included.
+
 The thesis is divided into five further chapters. Section two explains the theoretical background of the thesis. In the following chapter three the implementation and the testing is addressed. Afterwards Section four handles benchmarking. The thesis is then rounded up in Section five and six by highlighting future work and a conclusion.
 
 % further notes to think about on thesis introduction
